--- a/index.html
+++ b/index.html
@@ -2,22 +2,47 @@
 <html>
 	<head>
 		<title>BINGO</title>
+		
+		<!-- JQUER -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		
+		<!-- Custom Script-->
 		<script src="script.js" type="text/javascript"></script>
+		
+		<!--Font-->
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		
+		<!-- Compiled and minified CSS -->
+ 		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  		<!-- Compiled and minified JavaScript -->
+ 		 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+		
+		<!--Custom Style Sheet-->
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel = "stylesheet" type = "text/css" href="Grid.css">
 	</head>
-	<body>
-		<h1 class = "center" >All Purpose Bingo</h1>
 	
-		<div class="center">
-			<table id="bingoBoard"></table>
-		</div>
+	<body>
 		
-		
-		<h1 id = "roll">Click to Roll</h1>
-		<h2 id = 'value'></h2>
-		
+		<h1 class = "center card blue-grey darken-1 white-text" >All Purpose Bingo</h1>
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card blue-grey darken-1">
+			            <div class="card-content white-text">
+							<table id="bingoBoard"></table>
+						</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col s12 m6">
+					<div class="card blue-grey darken-1">
+			            <div class="card-content white-text">
+							<h1 id = "roll">Click to Roll</h1>
+							<h2 id = 'value'></h2>
+						</div>
+					</div>
+				</div>
+			</div>
+					
 	</body>
 </html>
