--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
 		<h1 class = "center card blue-grey darken-1 white-text" >All Purpose Bingo</h1>
 			<div class="row">
 				<div class="col s12 m6">
-					<div class="card blue-grey darken-1">
+					<div class="card blue-grey darken-1" id="card1">
 			            <div class="card-content white-text">
 							<table id="bingoBoard"></table>
 						</div>
 				</div>
 			</div>
 			<div class="row">
+				<
 				<div class="col s12 m6">
 					<div class="card blue-grey darken-1">
 			            <div class="card-content white-text">
-							<h1 id = "roll">Click to Roll</h1>
+							<div class="btn" id="roll">
+								Click to Roll
+							</div>
 							<h2 id = 'value'></h2>
 						</div>
 					</div>
